# serializer version: 1
# name: test_get_aliases[promotion0]
  None
# ---
# name: test_get_aliases[promotion1]
  list([
    'labs',
  ])
# ---
# name: test_get_aliases[promotion2]
  list([
    'staging',
  ])
# ---
# name: test_get_aliases[promotion3]
  None
# ---
# name: test_get_aliases[promotion4]
  list([
    'staging',
  ])
# ---
# name: test_get_aliases[promotion5]
  list([
    'prod',
  ])
# ---
# name: test_get_object_key[Q123-TestClassifier-version0]
  'Q123/TestClassifier/v1/model.pickle'
# ---
# name: test_get_object_key[Q456-AnotherClassifier-version1]
  'Q456/AnotherClassifier/v2/model.pickle'
# ---
# name: test_get_object_key[Q789-ThirdClassifier-version2]
  'Q789/ThirdClassifier/v10/model.pickle'
# ---
